[package]
name = "anim_curve"
version = "0.2.0"
authors = ["bp0002 <bp950722@outlook.com>"]
edition = "2021"
description = "Curve Calculation function library with simple dependencies."
repository = "https://github.com/bp0002/anim_curve.git"
license = "Apache-2.0"
keywords = ["animation", "curves"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default         = ["amount_f32", "frameidx_u16"]
amount_f32      = []
amount_f64      = []
frameidx_u16    = []
frameidx_u32    = []

[dependencies]
serde           = { version = "1.0", features = ["derive"], option=true }
simba           = { version = "0.*" }

[dev-dependencies]
log             = "0.4"
env_logger      = "0.9"